fix page indicator alignment; fix responsive alignment

--- a/frontend/pages/RegistrationPage/Breadcrumbs/_styles.scss
+++ b/frontend/pages/RegistrationPage/Breadcrumbs/_styles.scss
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     &::before {
       content: "";
@@ -31,7 +32,7 @@
       left: 90px;
 
       @include breakpoint(tablet) {
-        bottom: 25px;
+        bottom: 21px;
       }
     }
 
